--- a/Titanic_dataset.ipynb
+++ b/Titanic_dataset.ipynb
@@ -550,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Com essa diferença grande diferença entre treino e teste, provavelemnte o nosso modelo deu overfiting, ou seja ele meio que gravou o resultados do treino em vez de tentar prever\n",
+    "#Com essa grande diferença entre treino e teste, provavelemnte o nosso modelo deu overfiting, ou seja ele meio que gravou o resultados do treino em vez de tentar prever\n",
     "#Vejamos como podemos melhorar isso "
    ]
   },
