--- a/Classifier_problem/Taxa_de_criminalidade.ipynb
+++ b/Classifier_problem/Taxa_de_criminalidade.ipynb
@@ -238,7 +238,7 @@
    ],
    "source": [
     "df.head()\n",
-    "#Como não conseguir usar a planilhar criei um nova só com o dados"
+    "#Como não consegui usar a planilhar criei um nova só com o dados"
    ]
   },
   {
